--- a/style.css
+++ b/style.css
@@ -48,16 +48,26 @@
 
   .input-container {
     font-size: 35px;
+    margin-bottom: 5px;
   }
 
   input[type="number"] {
-    width: 31px;
     font-size: 35px;
     /*border-radius: 5px;*/
     /*border: none;*/
     text-align: center;
     height: 65px;
     width: 65px;
+  }
+
+  input[type="text"] {
+    font-size: 25px;
+    color: gray;
+    /*border-radius: 5px;*/
+    /*border: none;*/
+    height: 35px;
+    width: 523px;
+    vertical-align: top;
   }
 
   input[type="file"] {
@@ -75,7 +85,7 @@
   .image-container {
     position: relative;
     width: 95vw;
-    height: 88vh;
+    height: 84vh;
     margin-bottom: 5px;
     overflow: hidden;
     border: 1px solid lightgray;
@@ -111,3 +121,126 @@
     justify-content: center;
     align-items: center;
   }
+
+  /* 알림 on/off start */
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input {
+    display: none;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    transform: translateX(26px);
+  }
+  
+  /* Style the on/off labels */
+  .switch-label {
+    font-size: 14px;
+    margin-bottom: 0;
+    user-select: none;
+    color: #555;
+  }
+  
+  .switch-label:active {
+    font-weight: bold;
+  }
+  
+  .switch-label.on {
+    margin-left: .5em;
+    color: #5cb85c;
+  }
+  
+  .switch-label.off {
+    margin-right: .5em;
+    color: #d9534f;
+  }
+/* 알림 on/off end*/
+
+/* 모달 팝업 start */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px;
+  position: relative;
+  text-align: center;
+}
+
+.modal-close {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal-message {
+  font-size: 25px;
+  margin-bottom: 20px;
+  word-wrap: break-word;
+}
+
+.modal-ok {
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 20px;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+/* 모달 팝업 end */
