--- a/style.css
+++ b/style.css
@@ -1,192 +1,175 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  /*
-  #image {
-    width: 50%;
-    height: auto;
-    opacity: 0;
-    transition: opacity 1s;
-  }*/
-  
-  #timer {
-    font-size: 25px;
-  }
-  
-  #buttons {
-    margin-top: 1rem;
-  }
-  
-  button {
-    padding: 2px;
-    padding-left: 5px;
-    padding-right: 5px;
-    margin-right: 0px;
-    /*border: none;*/
-    /*border-radius: 5px;*/
-    font-size: 14px;
-    /*font-weight: bold;
-    color: #fff;
-    background-color: #1abc9c;
-    cursor: pointer;*/
-    height: 70px;
-    width: 70px;
-    vertical-align: top;
-  }
-  
-  button:last-child {
-    margin-right: 0;
-  }
+  /*position: relative;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  max-width: 645px;
+  font-size: 100%;
+}
 
-  select {
-    font-size: 35px;
-    height: 70px;
+@media only screen and (min-width: 646px) {
+  .container {
+    width: 645px;
+    font-size: 645px;
   }
+}
 
-  .input-container {
-    font-size: 35px;
-    margin-bottom: 5px;
-  }
 
-  input[type="number"] {
-    font-size: 35px;
-    /*border-radius: 5px;*/
-    /*border: none;*/
-    text-align: center;
-    height: 65px;
-    width: 65px;
-  }
+.image-container {
+  position: relative;
+  width: 53.4vh; /*9/16vh*100*95%;*/
+  height: 84vh;
+  margin-bottom: 1vh;
+  overflow: hidden;
+  border: 1px solid lightgray;
+  font-size: 2vh;
+  color: gray;
+  text-align: center;
+  line-height: 90vh; /* Set the line-height equal to the container height to center the text vertically */
+}
 
-  input[type="text"] {
-    font-size: 25px;
-    color: gray;
-    /*border-radius: 5px;*/
-    /*border: none;*/
-    height: 35px;
-    width: 524px;
-    vertical-align: top;
-  }
+.image-container img {
+  position: absolute;
+  max-width: 100%;
+  max-height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
 
-  input[type="file"] {
-    display: none;
-  }
-    
-  .timer-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .image-container {
-    position: relative;
-    width: 95vw;
-    height: 84vh;
-    margin-bottom: 5px;
-    overflow: hidden;
-    border: 1px solid lightgray;
-    font-size: 30px;
-    color: gray;
-    text-align: center;
-    line-height: 90vh; /* Set the line-height equal to the container height to center the text vertically */
-    /*padding-bottom: 75%;*/ /* Change this value to match the aspect ratio of your image */
-  }
-  
-  .image-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    max-width: 100%;
-    max-height: 100%;
-    /*width: 100%;
-    height: 100%;*/
-    /*border: 1;*/
-  }
+button {
+  padding: 1vh;
+  padding-left: 1vh;
+  padding-right: 1vh;
+  margin-right: 0%;
+  /*border: none;*/
+  /*border-radius: 5px;*/
+  font-size: 3vh;
+  /*font-weight: bold;
+  color: #fff;
+  background-color: #1abc9c;
+  cursor: pointer;*/
+  height: 5.5vh;
+  width: 5.8vh;
+  vertical-align: top;
+}
 
-  #upload-message {
-    display: inline-block; /* Make the message a block-level element */
-    vertical-align: middle; /* Vertically center the message within the container */
-    line-height: normal; /* Reset the line-height to normal to prevent additional vertical space */
-  }
-    
-  .button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+select {
+  font-size: 3vh;
+  height: 5.5vh;
+  width: 19vh;
+}
 
-  /* 알림 on/off start */
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
+.input-container {
+  width: 54vh; /*9/16vh*100*95%;*/
+  height: 5.5vh;
+  font-size: 3vh;
+  margin-bottom: 1vh;
+  display: flex;
+  justify-content: space-between;
+}
+
+input[type="number"] {
+  font-size: 2.5vh;
+  text-align: center;
+  height: 5vh;
+  width: 5.5vh;
+}
+
+input[type="text"] {
+  font-size: 2.5vh;
+  color: gray;
+  height: 5vh;
+  width: 42vh;
+  vertical-align: top;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+#upload-message {
+  font-size: 2.5vh;
+  display: inline-block; /* Make the message a block-level element */
+  vertical-align: middle; /* Vertically center the message within the container */
+  line-height: normal; /* Reset the line-height to normal to prevent additional vertical space */
+}
   
-  .switch input {
-    display: none;
-  }
-  
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: .4s;
-    border-radius: 34px;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    transition: .4s;
-    border-radius: 50%;
-  }
-  
-  input:checked + .slider {
-    background-color: #2196F3;
-  }
-  
-  input:checked + .slider:before {
-    transform: translateX(26px);
-  }
-  
-  /* Style the on/off labels */
-  .switch-label {
-    font-size: 14px;
-    margin-bottom: 0;
-    user-select: none;
-    color: #555;
-  }
-  
-  .switch-label:active {
-    font-weight: bold;
-  }
-  
-  .switch-label.on {
-    margin-left: .5em;
-    color: #5cb85c;
-  }
-  
-  .switch-label.off {
-    margin-right: .5em;
-    color: #d9534f;
-  }
+.button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 알림 on/off start */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 9vh;
+  height: 5vh;
+}
+
+.switch input {
+  display: none;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: .4s;
+  border-radius: 5vh;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 3.8vh;
+  width: 3.8vh;
+  left: 0.584vh;
+  bottom: 0.584vh;
+  background-color: white;
+  transition: .4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(3.8vh);
+}
+
+/* Style the on/off labels */
+.switch-label {
+  font-size: 3vw;
+  margin-bottom: 0;
+  user-select: none;
+  color: #555;
+}
+
+.switch-label:active {
+  font-weight: bold;
+}
+
+.switch-label.on {
+  margin-left: .5em;
+  color: #5cb85c;
+}
+
+.switch-label.off {
+  margin-right: .5em;
+  color: #d9534f;
+}
 /* 알림 on/off end*/
 
 /* 모달 팝업 start */
@@ -204,30 +187,30 @@
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
+  margin: 10vh auto;
+  padding: 2vh;
   border: 1px solid #888;
-  width: 80%;
-  max-width: 500px;
+  width: 50vh;
+  max-width: 95%;
   position: relative;
   text-align: center;
 }
 
 .modal-close {
   position: absolute;
-  top: 5px;
-  right: 10px;
-  font-size: 28px;
-  font-weight: bold;
+  top: 1vh;
+  right: 1vh;
+  font-size: 2vw;
+  /*font-weight: bold;*/
   cursor: pointer;
 }
 
 .modal-message {
-  font-size: 25px;
-  margin-bottom: 20px;
+  font-size: 3vw;
+  margin-bottom: 2vw;
   word-wrap: break-word;
 }
-
+/*
 .modal-ok {
   background-color: #4CAF50;
   color: white;
@@ -236,11 +219,11 @@
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  margin-top: 20px;
+  font-size: 3vw;
+  margin-top: 3vw;
   position: absolute;
-  bottom: 20px;
+  bottom: 3vw;
   left: 50%;
   transform: translateX(-50%);
-}
+}*/
 /* 모달 팝업 end */
