--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.full-screen {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 .container {
   /*position: relative;*/
   display: flex;
@@ -6,7 +14,6 @@
   justify-content: center;
   width: 100%;
   max-width: 645px;
-  font-size: 100%;
 }
 
 @media only screen and (min-width: 646px) {
@@ -15,7 +22,6 @@
     font-size: 645px;
   }
 }
-
 
 .image-container {
   position: relative;
@@ -27,7 +33,8 @@
   font-size: 2vh;
   color: gray;
   text-align: center;
-  line-height: 90vh; /* Set the line-height equal to the container height to center the text vertically */
+  line-height: 84vh; /* Set the line-height equal to the container height to center the text vertically */
+  /*vertical-align: top;*/
 }
 
 .image-container img {
@@ -187,11 +194,11 @@ input:checked + .slider:before {
 
 .modal-content {
   background-color: #fefefe;
-  margin: 10vh auto;
-  padding: 2vh;
+  margin: 5vh auto;
+  padding: 1.8vh;
   border: 1px solid #888;
-  width: 50vh;
-  max-width: 95%;
+  width: 49vh;
+  max-width: 90%;
   position: relative;
   text-align: center;
 }
