--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ select {
   background-color: #f2f2f2;
 }
 
+label {
+  font-size: 3vh;
+  padding-top: 0.2vh;
+}
+
 input[type="number"] {
   font-size: 2.5vh;
   text-align: center;
