--- a/style.css
+++ b/style.css
@@ -63,7 +63,8 @@ html, body {
 }
 
 .input-container {
-  width: calc(53.4 * var(--user-vh)); /*9/16vh*100*95%;*/
+  /*width: calc(53.4 * var(--user-vh));*/ /*9/16vh*100*95%;*/
+  width: calc(95 * var(--user-vw));
   height: calc(5.5 * var(--user-vh));
   font-size: calc(3 * var(--user-vh));
   margin-bottom: calc(0.2 * var(--user-vh));
