--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ button:disabled {
 select {
   font-size: calc(2.5 * var(--user-vh));
   height: calc(5.5 * var(--user-vh));
-  width: calc(19 * var(--user-vh));
+  width: calc(17.5 * var(--user-vh));
   border: 1px solid #ccc;
   border-radius: 5px;
   background-color: #f2f2f2;
@@ -106,7 +106,8 @@ select {
 
 label {
   font-size: calc(3 * var(--user-vh));
-  padding-top: calc(0.2 * var(--user-vh));
+  /*padding-top: calc(0.2 * var(--user-vh));*/
+  line-height: calc(4.5 * var(--user-vh));
 }
 
 input[type="number"] {
