--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ input:checked + .slider:before {
 
 .timer-label {
   text-align: left;
-  font-size: calc(1.6 * var(--user-vh));
+  font-size: calc(1.54 * var(--user-vh));
   color: gray;
   margin: 0 auto;
   position: relative;
@@ -326,4 +326,22 @@ input:checked + .slider:before {
   padding: 20px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121,121,121,0.2);
+}
+
+#input-cover{
+  position: absolute;
+  left: 0;
+  height: 100vh;/*calc(5.5 * var(--user-vh));*/
+  width: 100vw;
+  /*left: 50%;*/
+  /*position: absolute;*/
+  z-index: 1;
+  background-color: white;
+  border: 1px;
+  text-align: center;
+  vertical-align: top;
+  color: rgba(121,121,121,0.2);
+  font-size: calc(1 * var(--user-vh));
+  border-top: 1px solid rgba(109, 109, 109, 0.2);
+  display: none;
 }
