--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
   --user-vh: 1vh;
+  --user-vw: 1vh;
+  --user-remain-vh: 1vh;
 }
 
 html, body {
@@ -17,7 +19,7 @@ html, body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  vertical-align: top;
+  vertical-align: center;
   height: calc(100 * var(--user-vh));
   width: 100vw;
 }
@@ -38,6 +40,17 @@ html, body {
     width: 645px;
     font-size: 645px;
   }
+}
+
+.remain-space {
+  position: relative;
+  top: 0;
+  height: calc(1/2 * var(--user-remain-vh));
+  width: 100%;
+  /*display: flex;*/
+  /*justify-content: center;*/
+  /*box-sizing: border-box;
+  padding: 5px 3px;*/
 }
 
 .image-container {
@@ -71,7 +84,7 @@ html, body {
   width: calc(95 * var(--user-vw));
   height: calc(5.5 * var(--user-vh));
   font-size: calc(3 * var(--user-vh));
-  margin-bottom: calc(0.2 * var(--user-vh));
+  margin-bottom: calc(0.5 * var(--user-vh));
   display: flex;
   justify-content: space-between;
 }
@@ -80,12 +93,12 @@ button {
   padding: calc(1 * var(--user-vh));
   padding-left: calc(1 * var(--user-vh));
   padding-right: calc(1 * var(--user-vh));
-  margin-right: 0%;
+  margin: 0px;
   border: none;
   border-radius: 5px;
-  font-size: calc(3 * var(--user-vh));
+  font-size: calc(2.75 * var(--user-vh));
   /*font-weight: bold;*/
-  line-height: calc(3.8 * var(--user-vh));
+  line-height: calc(3.79 * var(--user-vh));
   background-color: #2196F3;
   color: #fff;
   /*cursor: pointer;*/
@@ -328,7 +341,7 @@ input:checked + .slider:before {
   border-top: 1px solid rgba(121,121,121,0.2);
 }
 
-#input-cover{
+#input-cover, #lable-cover{
   position: absolute;
   left: 0;
   height: 100vh;/*calc(5.5 * var(--user-vh));*/
@@ -342,6 +355,9 @@ input:checked + .slider:before {
   vertical-align: top;
   color: rgba(121,121,121,0.2);
   font-size: calc(1 * var(--user-vh));
-  border-top: 1px solid rgba(109, 109, 109, 0.2);
   display: none;
+}
+
+#lable-cover{
+  border-top: 1px solid rgba(109, 109, 109, 0.2);
 }
