--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html, body {
   position: relative;
   /*width: calc(53.4 * var(--user-vh));*/ /*9/16vh*100*95%=53.4*/
   width: calc(95 * var(--user-vw));
-  height: calc(84 * var(--user-vh));
+  height: calc((84-6) * var(--user-vh));
   /*margin-bottom: 1vh;*/
   margin-bottom: calc(0.5 * var(--user-vh));
   overflow: hidden;
@@ -65,7 +65,7 @@ html, body {
   font-size: calc(2 * var(--user-vh));
   color: gray;
   text-align: center;
-  line-height: calc(84 * var(--user-vh)); /* Set the line-height equal to the container height to center the text vertically */
+  line-height: calc((84-6) * var(--user-vh)); /* Set the line-height equal to the container height to center the text vertically */
 }
 
 .image-container img {
@@ -179,9 +179,22 @@ input[type="file"] {
   align-items: center;
 }
 
+.setting-container {
+  width: calc(95 * var(--user-vw));
+  height: calc(5.5 * var(--user-vh));
+  color: gray;
+  font-size: calc(1.5 * var(--user-vh));
+  margin-bottom: calc(0.5 * var(--user-vh));
+  /*display: flex;*/
+  justify-content: center;
+  align-items: center;
+  vertical-align: center;
+}
+
 .notification-label {
   color: gray;
-  font-size: calc(2.3 * var(--user-vh));
+  font-size: calc(1.5 * var(--user-vh));
+  width: calc(30 * var(--user-vh));
   display: inline-block; /* Make the message a block-level element */
   line-height: normal; /* Reset the line-height to normal to prevent additional vertical space */
 }
@@ -335,7 +348,7 @@ input:checked + .slider:before {
   align-items: left;
 }
 
-.nav{
+.nav {
   position: fixed;
   /*top: calc((84.5+5.7) * var(--user-vh));*/
   /*top: calc(93.3 * var(--user-vh));*/
