--- a/style.css
+++ b/style.css
@@ -125,8 +125,11 @@ select {
   width: calc(16.5 * var(--user-vh));
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f2f2f2;
   padding: calc(0.5 * var(--user-vh));
+}
+
+select:disabled {
+  background-color: #f2f2f2;
 }
 
 label {
@@ -142,6 +145,10 @@ input[type="number"] {
   width: calc(5.5 * var(--user-vh));
   border: 1px solid #ccc;
   border-radius: 5px;
+  
+}
+
+input[type="number"]:disabled {
   background-color: #f2f2f2;
 }
 
@@ -152,12 +159,16 @@ input[type="text"] {
   width: calc(42 * var(--user-vh));
   border: 1px solid #ccc;
   border-radius: 5px;
-  background-color: #f2f2f2;
   vertical-align: top;
   margin-right: calc(0.7 * var(--user-vh));
   padding-left: calc(0.5 * var(--user-vh));
   padding-right: calc(0.5 * var(--user-vh));
 }
+
+input[type="text"]:disabled {
+  background-color: #f2f2f2;
+}
+
 /*
 input[type="text"]:not(:focus) {
   color: #f2f2f2;
